Populate algos.html with product cards, import MEDIA_URL, fix overlay z-index

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -82,7 +82,7 @@ body {
     left: 0;
     position: fixed;
     background: black;
-    z-index: 1;
+    z-index: -1;
 }
 
 /* -------------------------------- Media Queries */
